--- a/e learning/index.html
+++ b/e learning/index.html
@@ -7,20 +7,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="light-theme"> <!-- Change this to "light-theme" for the light theme -->
+<body class="gradient-background light-theme"> <!-- Afirst e learning page -->
     <header class="header-bg">
-        <h1>E-Learning Solutions</h1>
+        <h1 id="header-title">E-Learning Solutions</h1>
     </header>
     <main>
         <section class="intro">
             <div class="intro-content">
                 <div class="text">
-                    <h2>Transform Your Business</h2>
-                    <p>Krdxcs stands out as a prominent global eLearning service provider, boasting extensive expertise in tailored eLearning solutions, enterprise learning, eLearning technology, and learning support. In recent times, there has been a notable evolution in learning and training requirements, with a seamless integration into organizations and gradual transformations. eLearning solutions grant learners the utmost flexibility, allowing them to choose when, where, and at what pace they engage in their studies.</p>
+                    <h2 id="transform-title">Transform Your Business</h2>
+                    <p id="intro-paragraph">Krdxcs stands out as a prominent global eLearning service provider, boasting extensive expertise in tailored eLearning solutions, enterprise learning, eLearning technology, and learning support. In recent times, there has been a notable evolution in learning and training requirements, with a seamless integration into organizations and gradual transformations. eLearning solutions grant learners the utmost flexibility, allowing them to choose when, where, and at what pace they engage in their studies.</p>
                     <p>Here at Krdxcs, we specialize in crafting custom content for e-Learning courses, providing hosting on companion websites, and employing cutting-edge technologies to adapt content into various formats. Additionally, we extend services for media development and integration. Our approach in every phase of content development is highly focused and customized to cater to both individual and organizational needs.</p>
                     <p>We take pride in the adaptability of our range of development strategies and our ability to align them with your unique challenges. Our instructional designers, creative and technical writers, multimedia artists, and technologists collaborate closely to design eLearning solutions that effectively address your training and business objectives.</p>
                     <h3>Our Interaction Tools include:</h3>
-                    <ul>
+                    <ul id="bullet-list">
                         <li><span class="checkmark">✔</span> Multimedia</li>
                         <li><span class="checkmark">✔</span> Flash Demos</li>
                         <li><span class="checkmark">✔</span> Simulation</li>
@@ -53,15 +53,20 @@
             </div>
         </section>
         <section class="contact-us">
-            <h2>Let's Build Something Great Together</h2>
-            <p>Embark on your e-learning development journey with us. We're here to turn your concepts into feature-rich, user-friendly e-learning solutions that make an impact. <a href="contact.html">Contact us today</a> to discuss your project, and let's bring your vision to life in the world of e-learning technology.</p>
+            <h2 id="contact-title">Let's Build Something Great Together</h2>
+            <p id="contact-paragraph">Embark on your e-learning development journey with us. We're here to turn your concepts into feature-rich, user-friendly e-learning solutions that make an impact. <a href="contact.html">Contact us today</a> to discuss your project, and let's bring your vision to life in the world of e-learning technology.</p>
         </section>
     </main>
     <footer>
         <section class="contact">
-            <h2>Contact Us</h2>
-            <p>Ready to enhance your business operations? <a href="contact.html">Get in touch with us</a> to start your e-learning development journey today!</p>
+            <h2 id="footer-contact-title">Contact Us</h2>
+            <p id="footer-contact-info">Ready to enhance your business operations? <a href="contact.html">Get in touch with us</a> to start your e-learning development journey today!</p>
         </section>
     </footer>
+    <select id="language-switcher">
+        <option value="en">English</option>
+        <option value="jp">Japanese</option>
+    </select>
+    <script src="script.js"></script>
 </body>
 </html>
