--- a/mobile/index.html
+++ b/mobile/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="light-theme"> <!-- Change this to "dark-theme" for the dark theme -->
+<body class="gradient-background light-theme"> <!-- Added gradient-background class -->
     <header class="header-bg">
         <h1 id="header-title">Mobile App Development</h1>
         <select id="language-switcher">
