--- a/software/index.html
+++ b/software/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="light-theme"> <!-- Change this to "light-theme" for the light theme -->
+<body class="gradient-background light-theme"> <!-- Added gradient-background class -->
     <header class="header-bg">
         <h1>Software Development</h1>
     </header>
@@ -23,6 +23,7 @@
                 </div>
             </div>
         </section>
+        <!--
         <section class="technologies-used">
             <h2>Technologies Used</h2>
             <div class="tech-grid">
@@ -50,7 +51,7 @@
                     <img src="nodejs.png" alt="NodeJS">
                     <p>NodeJS</p>
                 </div>
-                <!-- Add more technologies as needed -->
+                Add more technologies as needed -->
             </div>
         </section>
         <section class="contact-us">
