--- a/transform/index.html
+++ b/transform/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="light-theme"> <!-- Change this to "light-theme" for the light theme -->
+<body class="gradient-background light-theme"> <!-- Added gradient-background class -->
     <header class="header-bg">
         <h1>Digital Transformation</h1>
     </header>
